unpackaged/main/default/objects/Mobility_Scoring__c/Mobility_Scoring__c.object-meta.xml
<CustomObject>
    <label>Mobility Scoring</label>
    <nameField>
        <displayFormat>MS-{0000}</displayFormat>
        <label>Mobility Scoring Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mobility Scorings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>