unpackaged/main/default/objects/Mobility_Scoring__c/fields/How_often_Other_Text__c.field-meta.xml
<CustomField>
    <fullName>How_often_Other_Text__c</fullName>
    <label>How often Other Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>