unpackaged/main/default/objects/Mobility_Scoring__c/fields/RoMS__c.field-meta.xml
<CustomField>
    <fullName>RoMS__c</fullName>
    <label>RoMS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>