unpackaged/main/default/objects/Mobility_Scoring__c/fields/Which_cows__c.field-meta.xml
<CustomField>
    <fullName>Which_cows__c</fullName>
    <label>Which cows?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All milking cows (incl.those in the hospital pen)</fullName>
            </value>
            <value>
                <fullName>All milking and dry cows (incl. the hospital pen)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>