unpackaged/main/default/objects/Mobility_Scoring__c/fields/Which_cows_Other_Text__c.field-meta.xml
<CustomField>
    <fullName>Which_cows_Other_Text__c</fullName>
    <label>Which cows Other Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>