unpackaged/main/default/objects/Mobility_Scoring__c/fields/Who_scores__c.field-meta.xml
<CustomField>
    <fullName>Who_scores__c</fullName>
    <label>Who scores</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Veterinary practice</fullName>
            </value>
            <value>
                <fullName>Farm staff</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>