unpackaged/main/default/objects/Mobility_Scoring__c/fields/Who_scores_Other_Text__c.field-meta.xml
<CustomField>
    <fullName>Who_scores_Other_Text__c</fullName>
    <label>Who scores Other Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>