unpackaged/main/default/objects/Mobility_Scoring__c/fields/WOADairy__c.field-meta.xml
<CustomField>
    <fullName>WOADairy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WOADairy</label>
    <referenceTo>WOADairy__c</referenceTo>
    <relationshipLabel>Mobility Scorings</relationshipLabel>
    <relationshipName>Mobility_Scorings</relationshipName>
    <type>Lookup</type>
</CustomField>